--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -47,6 +47,9 @@ jobs:
           # install full prebuilt version
           TINYTEX_INSTALLER: TinyTeX
 
+      - run: brew install openmpi
+        if: runner.os == 'macOS-latest'
+
       - uses: r-lib/actions/setup-r-dependencies@v1
         if: runner.os != 'Linux' || matrix.config.r != 'release' || github.event_name != 'push'
         with:
