Ignore a few latex temporary files.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -51,12 +51,16 @@ DEVEL-README
 ^tests/testthat/test-nocran-*
 ^tmp
 ^tune-conf$
-^vignettes/.*bbl
-^vignettes/.*blg
-^vignettes/.*dvi
-^vignettes/.*log$
-^vignettes/.*rel
-^vignettes/.*synctex.gz
+^vignettes/.*\.bak
+^vignettes/.*\.bbl
+^vignettes/.*\.blg
+^vignettes/.*\.dvi
+^vignettes/.*\.fdb_latexmk
+^vignettes/.*\.fls
+^vignettes/.*\.log$
+^vignettes/.*\.rel
+^vignettes/.*\.synctex
+^vignettes/.*\.toc
 ^vignettes/\.auctex-auto
 ^vignettes/_region_.tex
 ^vignettes/figure
