--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ docs/
 /vignettes/*.out
 /vignettes/*.toc
 /vignettes/*.bbl
+/vignettes/*.fls
 /vignettes/*.synctex*
 /vignettes/irace-package.tex
 /vignettes/irace-package.pdf
