--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -17,7 +17,9 @@ env:
   
 jobs:
   R-CMD-check:
-
+    
+    if: "! contains(github.event.head_commit.message, '[ci skip]')"
+    
     runs-on: ${{ matrix.config.os }}
 
     name: Check ${{ matrix.config.os }} (${{ matrix.config.r }})
