--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(CommandArgsParser)
 export(ablation)
 export(buildCommandLine)
 export(checkIraceScenario)
+export(checkParameters)
 export(checkScenario)
 export(cmdline_usage)
 export(configurations.print)
