--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -18,7 +18,7 @@ env:
 jobs:
   R-CMD-check:
     
-    if: "! contains(github.event.head_commit.message, '[ci skip]')"
+    if: "! contains(github.event.head_commit.message, '[skip ci]')"
     
     runs-on: ${{ matrix.config.os }}
 
@@ -192,6 +192,11 @@ jobs:
         run: |
           make version
 
+      - name: Install package
+        run: |
+          remotes::install_local(".")
+        shell: Rscript {0}
+
       - name: Deploy package
         if: success()
         run: |
@@ -200,7 +205,7 @@ jobs:
           # Commit version.R so that install_github works
           git add --force R/version.R
           git commit R/version.R --allow-empty -m "Update version.R [skip ci]"
-          git push --force origin 'HEAD'
+          git push origin 'HEAD'
           # Commit vignette PDF to webpage
           export DEST_DIR=$(mktemp -d)
           git remote set-branches origin gh-pages
@@ -210,7 +215,7 @@ jobs:
           Rscript -e 'file.copy(system.file("doc/irace-package.pdf",package="irace", mustWork=TRUE), "./", overwrite=TRUE)'
           git add -A .
           git commit --allow-empty -m "Regenerate user guide [skip ci]"
-          git push --force origin 'HEAD:gh-pages'
+          git push origin 'HEAD:gh-pages'
           popd
           git worktree remove $DEST_DIR
           Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
