--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -187,15 +187,10 @@ jobs:
           tinytex::tlmgr_install(pkgs = strsplit(Sys.getenv("LATEX_PACKAGES"),split=":")[[1]])
         shell: Rscript {0}
         
-      - name: Update version
+      - name: Create vignette (and update version)
         if: success()
         run: |
-          make version
-
-      - name: Install package
-        run: |
-          remotes::install_local(".")
-        shell: Rscript {0}
+          make vignettes
 
       - name: Deploy package
         if: success()
@@ -205,14 +200,14 @@ jobs:
           # Commit version.R so that install_github works
           git add --force R/version.R
           git commit R/version.R --allow-empty -m "Update version.R [skip ci]"
-          git push origin 'HEAD'
+          git push origin 'HEAD:master' || exit 1
           # Commit vignette PDF to webpage
           export DEST_DIR=$(mktemp -d)
           git remote set-branches origin gh-pages
           git fetch origin gh-pages
           git worktree add --track -B gh-pages $DEST_DIR origin/gh-pages
+          Rscript -e "file.copy(\"vignettes/irace-package.pdf\", \"$DEST_DIR\", overwrite=TRUE)" || exit 1
           pushd $DEST_DIR
-          Rscript -e 'file.copy(system.file("doc/irace-package.pdf",package="irace", mustWork=TRUE), "./", overwrite=TRUE)'
           git add -A .
           git commit --allow-empty -m "Regenerate user guide [skip ci]"
           git push origin 'HEAD:gh-pages'
