--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -14,12 +14,12 @@ env:
   _R_CHECK_CRAN_INCOMING_REMOTE_: false
   LATEX_PACKAGES: oberdiek:grfext:environ:trimspaces:etoolbox:upquote:babel-english:pgf:xcolor:algorithms:relsize:tocbibind:appendix:tocloft:enumitem:listings:tcolorbox:collection-fontsrecommended:framed:inconsolata:microtype
   R_KEEP_PKG_SOURCE: yes
-  
+
 jobs:
   R-CMD-check:
-    
+
     if: "! contains(github.event.head_commit.message, '[skip ci]')"
-    
+
     runs-on: ${{ matrix.config.os }}
 
     name: Check ${{ matrix.config.os }} (${{ matrix.config.r }})
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: r-lib/actions/setup-pandoc@master
-        
+
       - uses: r-lib/actions/setup-r@master
         with:
           r-version: ${{ matrix.config.r }}
@@ -49,10 +49,16 @@ jobs:
           use-public-rspm: true
 
       - name: Install latex
-        uses: r-lib/actions/setup-tinytex@v1
+        uses: r-lib/actions/setup-tinytex@v2
         env:
           # install full prebuilt version
           TINYTEX_INSTALLER: TinyTeX
+
+      - name: Install latex packages
+        run: |
+          remotes::install_cran("tinytex")
+          tinytex::tlmgr_install(pkgs = strsplit(Sys.getenv("LATEX_PACKAGES"),split=":")[[1]])
+        shell: Rscript {0}
 
       - name: Install MPI in macOS
         run: brew install openmpi
@@ -60,15 +66,8 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@master
         with:
-          extra-packages: |
-             rcmdcheck
-        
-      - name: Install latex packages
-        run: |
-          remotes::install_cran("tinytex")
-          tinytex::tlmgr_install(pkgs = strsplit(Sys.getenv("LATEX_PACKAGES"),split=":")[[1]])
-        shell: Rscript {0}
-      
+          extra-packages: rcmdcheck
+
       - name: Check (NOT CRAN)
         if: success()
         env:
@@ -77,7 +76,7 @@ jobs:
           options(crayon.enabled = TRUE)
           rcmdcheck::rcmdcheck(args = c("--no-manual", "--run-donttest","--timings"), error_on = "warning", check_dir = "check")
         shell: Rscript {0}
-      
+
       - name: Check (CRAN)
         env:
           NOT_CRAN: false
@@ -104,25 +103,25 @@ jobs:
           - {os: ubuntu-20.04, r: 'release'}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-    
+
     steps:
       - uses: actions/checkout@v2
 
       - uses: r-lib/actions/setup-pandoc@master
-        
-      - uses: r-lib/actions/setup-r@master
+
+      - uses: r-lib/actions/setup-r@v2-branch
         with:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
-          
+
       - name: Install latex
-        uses: r-lib/actions/setup-tinytex@v1
+        uses: r-lib/actions/setup-tinytex@v2
         env:
           # install full prebuilt version
           TINYTEX_INSTALLER: TinyTeX
 
-      - uses: r-lib/actions/setup-r-dependencies@master
+      - uses: r-lib/actions/setup-r-dependencies@v2-branch
         with:
           extra-packages: |
             covr
@@ -134,7 +133,7 @@ jobs:
           remotes::install_cran("tinytex")
           tinytex::tlmgr_install(pkgs = strsplit(Sys.getenv("LATEX_PACKAGES"),split=":")[[1]])
         shell: Rscript {0}
-      
+
       - name: Test coverage
         if: success()
         run: |
@@ -156,41 +155,45 @@ jobs:
           - {os: ubuntu-20.04, r: 'release'}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-    
+
     steps:
       - uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-pandoc@master
-        
-      - uses: r-lib/actions/setup-r@master
+      - uses: r-lib/actions/setup-pandoc@v2-branch
+
+      - uses: r-lib/actions/setup-r@v2-branch
         with:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
-          
+
       - name: Install latex
-        uses: r-lib/actions/setup-tinytex@v1
+        uses: r-lib/actions/setup-tinytex@v2
         env:
           # install full prebuilt version
           TINYTEX_INSTALLER: TinyTeX
 
-      - uses: r-lib/actions/setup-r-dependencies@master
-        with:
-          extra-packages: |
-            pkgdown
-          needs: |
-            website
-        
       - name: Install latex packages
         run: |
           remotes::install_cran("tinytex")
           tinytex::tlmgr_install(pkgs = strsplit(Sys.getenv("LATEX_PACKAGES"),split=":")[[1]])
         shell: Rscript {0}
-        
-      - name: Create vignette (and update version)
+
+      - name: Update version
         if: success()
         run: |
-          make vignettes
+          make version
+
+      - uses: r-lib/actions/setup-r-dependencies@v2-branch
+        with:
+          extra-packages: any::pkgdown
+          needs: website
+
+      - name: Install package with vignettes
+        if: success()
+        run: |
+          remotes::install_local(".", build = TRUE, upgrade = "never", force = TRUE, build_opts = c("--no-resave-data"), build_manual = TRUE, build_vignettes = TRUE)
+        shell: Rscript {0}
 
       - name: Deploy package
         if: success()
@@ -206,8 +209,8 @@ jobs:
           git remote set-branches origin gh-pages
           git fetch origin gh-pages
           git worktree add --track -B gh-pages $DEST_DIR origin/gh-pages
-          Rscript -e "file.copy(\"vignettes/irace-package.pdf\", \"$DEST_DIR\", overwrite=TRUE)" || exit 1
           pushd $DEST_DIR
+          Rscript -e 'file.copy(system.file("doc/irace-package.pdf",package="irace", mustWork=TRUE), "./", overwrite=TRUE)' || exit 1
           git add -A .
           git commit --allow-empty -m "Regenerate user guide [skip ci]"
           git push origin 'HEAD:gh-pages'
@@ -215,4 +218,3 @@ jobs:
           git worktree remove $DEST_DIR
           Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
         shell: bash {0}
-  
