* .github/workflows/R-CMD-check.yaml: Try again to fix user-guide.

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -62,6 +62,7 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
+          cache-version: 2
           
       - name: Install latex packages
         run: |
