* .github/workflows/R-CMD-check.yaml: pull before push [skip ci].

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -204,6 +204,8 @@ jobs:
           # FIXME: Is there a better way to record the git sha in R?
           git add --force R/version.R
           git commit R/version.R --m "Update version.R [skip ci]"
+          # pull so that if there are new commits, we can push
+          git pull --rebase
           git push origin 'HEAD:master' || exit 1
           # pkgdown
           Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)' || exit 1
