* New function read_logfile.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(psRace)
 export(readConfigurationsFile)
 export(readParameters)
 export(readScenario)
+export(read_logfile)
 export(read_pcs_file)
 export(removeConfigurationsMetaData)
 export(scenario.update.paths)
@@ -38,18 +39,15 @@ import(compiler)
 import(stats)
 import(utils)
 importFrom(R6,R6Class)
-importFrom(grDevices,cairo_pdf)
 importFrom(grDevices,dev.new)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
-importFrom(grDevices,rgb)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
 importFrom(graphics,boxplot)
 importFrom(graphics,bxp)
 importFrom(graphics,grid)
-importFrom(graphics,hist)
 importFrom(graphics,lines)
 importFrom(graphics,matplot)
 importFrom(graphics,mtext)
