The package now provides an ablation (ablation.exe in Windows) executable that makes easier to perform ablation analysis without having any R knowledge.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(CommandArgsParser)
 export(ablation)
+export(ablation_cmdline)
 export(buildCommandLine)
 export(checkIraceScenario)
 export(checkParameters)
