--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,5 +40,6 @@ URL: https://mlopez-ibanez.github.io/irace, https://github.com/MLopez-Ibanez/ira
 BugReports: https://github.com/MLopez-Ibanez/irace/issues
 ByteCompile: yes
 Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 SystemRequirements: GNU make
