New function printParameters.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(irace.main)
 export(irace.version)
 export(path_rel2abs)
 export(plotAblation)
+export(printParameters)
 export(printScenario)
 export(psRace)
 export(readConfigurationsFile)
