--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(read_logfile)
 export(read_pcs_file)
 export(removeConfigurationsMetaData)
 export(scenario.update.paths)
+export(scenario_update_paths)
 export(target.evaluator.default)
 export(target.runner.default)
 export(testConfigurations)
