--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -98,6 +98,7 @@ jobs:
     needs: R-CMD-check
     name: Coverage
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
@@ -130,7 +131,7 @@ jobs:
       - name: Test coverage
         if: success()
         run: |
-          covr::codecov(type="tests", quiet=FALSE)
+          covr::codecov(type="all", quiet=FALSE)
         shell: Rscript {0}
 
   pkgdown:
